--- a/src/Content.css
+++ b/src/Content.css
@@ -1,11 +1,11 @@
 .Content {
     color: aliceblue;
-font-size: 10px;
+
 position: relative;
 
 text-align: center;
 
 font-size: 1rem;
-top: 100px;
-
+margin-top: 100px;
+padding-bottom: 100%;
 }
